--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,11 @@ body{
 .logo{
   height: 35px;
 }
+
+.logo:hover{
+  animation: moveInLeft 2s ease-out;
+}
+
 .text-box{
   position: absolute;
   top: 40%;
@@ -54,6 +59,7 @@ body{
 .heading-primary{
   color: #fff;
   text-transform: uppercase;
+  backface-visibility: hidden;
 }
 
 .heading-primary-main{
@@ -61,20 +67,21 @@ body{
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
-  animation-name: moveIntoRight;
-  animation-duration: 3s;
+  animation: moveIntoRight 3s ease-out;
+
 }
 .heading-primary-sub{
   display: block;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.3px;
-  animation-name: moveIntoLeft;
-  animation-duration: 3s;
+  animation: moveIntoLeft 3s ease-out;
+
 }
 
 @keyframes moveIntoRight {
   0%{
+    opacity:0;
     transform: translateX(-100%);
   }
 
@@ -83,11 +90,13 @@ body{
   }
 
   100%{
+    opacity:1;
     transform: translate(0);
   }
 }
 @keyframes moveIntoLeft {
   0%{
+    opacity:0;
     transform: translateX(100%);
   }
 
@@ -96,6 +105,7 @@ body{
   }
 
   100%{
+    opacity:1;
     transform: translate(0);
   }
 }
